# pyproject-example

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
example/: __main__.py  example.py
src/example/: example.py
